--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 tokio = { version = "1.48.0", features = ["full"] }
 urlencoding = "2.1.3"
+
+[dev-dependencies]
+test-case = "3.3.1"
