--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ base64 = "0.22.1"
 clap = { version = "4.5.51", features = ["env", "derive"] }
 color-eyre = "0.6.5"
 crossterm = "0.29.0"
+indoc = "2.0.7"
 octocrab = "0.47.1"
 ratatui = "0.29.0"
 reqwest = { version = "0.12.24", features = ["json"] }
