--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ color-eyre = "0.6.5"
 crossterm = "0.29.0"
 indoc = "2.0.7"
 octocrab = "0.47.1"
+open = "5.3.3"
 ratatui = "0.29.0"
 reqwest = { version = "0.12.24", features = ["json"] }
 serde = { version = "1.0.228", features = ["derive"] }
