--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ reqwest = { version = "0.12.24", features = ["json"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 tokio = { version = "1.48.0", features = ["full"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tracing-appender = "0.2"
 urlencoding = "2.1.3"
 
 [dev-dependencies]
