--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tracing-appender = "0.2"
 urlencoding = "2.1.3"
+dotenvy = "0.15.7"
 
 [dev-dependencies]
 test-case = "3.3.1"
