--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,10 @@ dirs = "5.0"
 indoc = "2.0.7"
 open = "5.3.3"
 ratatui = "0.29.0"
-reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12.24", default-features = false, features = [
+  "json",
+  "rustls-tls",
+] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 tokio = { version = "1.48.0", features = ["full"] }
